# jb_homebase

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: claw-main-prompt-reference.md  evals.md  jordan-claw-lessons-learned.md  observability.md
docs/plans/: analytics-observability.md
evals/: .gitignore  __init__.py  registry.py  run_eval.py  seed_corpus.py  types.py
evals/baselines/: memory_recall.json  obsidian_retrieval.json
evals/datasets/: memory_recall.yaml  obsidian_retrieval.yaml
evals/fixtures/: corpus.yaml
evals/scorers/: __init__.py  memory_recall.py  obsidian_retrieval.py
evals/tasks/: memory_recall.py  obsidian_retrieval.py
jordan-claw/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
jordan-claw/tests/: conftest.py  test_agents.py  test_calendar.py  test_config.py  test_conversations.py  test_db_proactive.py  test_gateway.py  (+9 more)
tests/: test_agent_runner.py  test_analytics_proxy.py  test_config.py  test_conversations.py  test_db_feedback.py  test_db_memory.py  test_db_obsidian.py  test_db_proactive.py  test_db_usage_events.py  test_emitter.py  test_evals_isolation.py  test_evals_smoke.py  test_feedback_command.py  test_memory_extractor.py  test_memory_reader.py  test_memory_tools.py  test_obsidian_embeddings.py  test_obsidian_models.py  test_obsidian_parser.py  test_obsidian_sync_export.py  test_obsidian_sync_ingest.py  test_obsidian_tools.py  test_posthog_client.py  test_pricing.py  test_proactive_executors.py  test_proactive_integration.py  test_proactive_scheduler.py  test_tool_registry.py
(+81 files in other folders)
